# synthr

./: .dockerignore  .env.example  .gitignore  CONTRIBUTING.md  Dockerfile  README.md  ROADMAP.md  SECURITY.md  SPEC.md  USAGE.md  docker-compose.yml  pyproject.toml  synthr.config.example.yaml
.github/ISSUE_TEMPLATE/: bug_report.md  feature_request.md  provider_request.md
.github/workflows/: ci.yml
docs/adr/: 0001-feature-level-gateway.md  0002-sqlite-first.md  0003-provider-capabilities.md  0004-config-driven-routing.md
examples/: README.md  backend.py  frontend.html  frontend.mjs  rest.sh
examples/nextjs/: README.md  package-lock.json  package.json  tsconfig.json
examples/nextjs/app/: layout.tsx  page.tsx
scripts/: capture_dashboard.py  capture_playground.py
sdk/python/: README.md  pyproject.toml
sdk/python/synthr/: __init__.py  _payloads.py  client.py  errors.py
sdk/python/tests/: test_client.py
sdk/typescript/: README.md  package-lock.json  package.json  tsconfig.json
sdk/typescript/src/: client.ts  index.ts  types.ts
src/synthr_gateway/: __init__.py  __main__.py  app.py  cli.py
src/synthr_gateway/api/: __init__.py  deps.py  health.py  openapi.py  runner.py
src/synthr_gateway/cache/: __init__.py  base.py  manager.py  memory.py  semantic.py  sqlite.py
src/synthr_gateway/config/: __init__.py  loader.py  preflight.py  schema.py
src/synthr_gateway/core/: __init__.py  envelope.py  errors.py
src/synthr_gateway/dashboard/: __init__.py  routes.py
src/synthr_gateway/features/: __init__.py  common.py  dispatch.py
src/synthr_gateway/guardrails/: __init__.py  input.py  output.py
src/synthr_gateway/jobs/: __init__.py  manager.py  store.py
src/synthr_gateway/optimizer/: __init__.py  compress.py
src/synthr_gateway/providers/: __init__.py  base.py  gemini.py  health.py  http.py  huggingface.py  mock.py  openai_compat.py  registry.py  (+2 more)
tests/: conftest.py  test_auth.py  test_auth_hardening.py  test_budget.py  test_cache.py  test_chat.py  test_circuit_breaker.py  test_cli.py  test_config.py  test_cors.py  test_dashboard.py  test_embed.py  test_fallback.py  test_fillform.py  test_guardrails.py  test_huggingface.py  test_image.py  test_jobs.py  test_more_features.py  test_new_features.py  test_ocr.py  test_optimizer.py  test_output_guardrails.py  test_preflight.py  test_provider_adapters.py  test_provider_retry.py  test_ratelimit.py  test_removebg.py  test_semantic_cache.py  test_text_features.py  test_usage.py  test_workflow.py
(+78 files in other folders)
