[project]
name = "synthr-gateway"
version = "0.1.0"
description = "Self-hosted, batteries-included AI-capabilities gateway"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastapi>=0.110",
    "uvicorn[standard]>=0.29",
    "httpx>=0.27",
    "pydantic>=2.6",
    "pyyaml>=6.0",
    "python-dotenv>=1.0",
    "jinja2>=3.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=8",
    "pytest-asyncio>=0.23",
    "ruff>=0.6",
    "mypy>=1.10",
]
vision = [
    "rembg>=2.0",
    "onnxruntime>=1.17",  # rembg's inference engine (no longer bundled by rembg itself)
    "pillow>=10",
]
semantic = [
    "scikit-learn>=1.3",
]

[project.scripts]
synthr-gateway = "synthr_gateway.__main__:main"
synthr = "synthr_gateway.cli:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/synthr_gateway"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.ruff]
line-length = 120
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
ignore = [
    "E501",   # line length — informative, not enforced
    "B008",   # function call in default arg — FastAPI Depends()/Header() are idiomatic
    "UP042",  # str+Enum vs StrEnum — kept for stable .value serialization
]

[tool.mypy]
python_version = "3.12"
files = ["src"]
ignore_missing_imports = true
# Pragmatic, not strict — this is an MVP. Tightening is a roadmap item.
check_untyped_defs = true
warn_unused_ignores = true
